--- a/Views/Inquilino/Detalle.cshtml
+++ b/Views/Inquilino/Detalle.cshtml
@@ -41,9 +41,9 @@
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group-spacing">
-        <a asp-action="Index" title="Volver">
-            <i class="fa-solid fa-undo fa-lg"></i>
+    <div class="form-group-spacing mt-8">
+        <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
+            <i class="fa-solid fa-undo"></i>
         </a>
     </div>
 </div>
