--- a/Views/Propietario/Editar.cshtml
+++ b/Views/Propietario/Editar.cshtml
@@ -53,9 +53,9 @@
                     <input type="submit" value="Guardar" class="btn btn-success" />
                 </div>
         </form>
-        <div class="form-group-spacing volver">
-            <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo fa-lg"></i>
+        <div class="form-group-spacing mt-8">
+            <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
+                <i class="fa-solid fa-undo"></i>
             </a>
         </div>
     </div>
