--- a/Views/Contrato/index.cshtml
+++ b/Views/Contrato/index.cshtml
@@ -2,22 +2,21 @@
 
 @{
     ViewData["Title"] = "Contratos";
-
+    bool isAdmin = User.IsInRole("Administrador");
+    bool IsEmple = User.IsInRole("Empleado");
 }
 <div class="text-center">
-    <h1 class="display-4">Listado de contratos activos</h1>
+    <h1 class="display-4">Contratos activos</h1>
 </div>
-<form id="filtrosForm" method="get" action="@Url.Action("Index")">
+<form id="filtrosForm" method="get" action="@Url.Action("Index")" class="p-4 border border-secondary rounded">
+    <div class="row g-3 align-items-end">
 
-    <div class="row">
-
-        <!-- Filtro por propietario -->
-        <div id="filtroPropietario" class="col-md-3">
-            <label for="propietarioId" class="form-label">Seleccionar Propietario:</label>
-            <select name="propietarioId" class="form-select select2 custom-border" asp-items="ViewBag.Propietarios">
-                <option value="">Seleccionar Propietario</option>
+        <!-- Filtro por inquilino -->
+        <div id="filtroInquilino" class="col-md-3">
+            <label for="inquilinoId" class="form-label">Seleccionar Inquilino:</label>
+            <select name="inquilinoId" class="form-select select2 custom-border" asp-items="ViewBag.Inquilinos">
+                <option value="">Seleccionar Inquilino</option>
             </select>
-
         </div>
 
         <!-- Filtro por inmueble -->
@@ -29,38 +28,39 @@
             </select>
         </div>
 
-
         <!-- Filtro por fecha (Fecha Desde y Fecha Hasta) -->
-        <div id="filtroFecha" class="col-md-6 row">
-            <div class="col-md-6">
-                <label for="fechaDesde" class="form-label">Fecha Desde:</label>
-                <input type="date" name="fechaDesde" class="form-control"
-                    value="@ViewContext.HttpContext.Request.Query["fechaDesde"]" />
+        <div id="filtroFecha" class="col-md-4">
+            <div class="row g-2">
+                <div class="col-md-6">
+                    <label for="fechaDesde" class="form-label">Fecha Desde:</label>
+                    <input type="date" name="fechaDesde" class="form-control"
+                        value="@ViewContext.HttpContext.Request.Query["fechaDesde"]" />
+                </div>
+                <div class="col-md-6">
+                    <label for="fechaHasta" class="form-label">Fecha Hasta:</label>
+                    <input type="date" name="fechaHasta" class="form-control"
+                        value="@ViewContext.HttpContext.Request.Query["fechaHasta"]" />
+                </div>
             </div>
-
-            <div class="col-md-6">
-                <label for="fechaHasta" class="form-label">Fecha Hasta:</label>
-                <input type="date" name="fechaHasta" class="form-control"
-                    value="@ViewContext.HttpContext.Request.Query["fechaHasta"]" />
-            </div>
-
-
         </div>
-        <div class="col-md-12 mt-3">
-            <button type="submit" class="btn btn-primary ">Filtrar</button>
-            <button type="button" class="btn btn-secondary ms-2" onclick="limpiarFiltros()">
-                <i class="fas fa-times"></i> Limpiar Filtros
+
+        <!-- Botones en la misma fila -->
+        <div class="col-md-2 d-flex align-items-end">
+            <button type="submit" class="btn btn-primary me-2">Filtrar</button>
+            <button type="button" class="btn btn-secondary" onclick="limpiarFiltros()">
+                <i class="fas fa-times"></i> Limpiar
             </button>
         </div>
-        <div class="col-md-12 mt-3">
-            <a href="@Url.Action("ListaVencidos", "Contrato")" class="btn btn-primary">Contratos Vencidos</a>
-
-        </div>
-
     </div>
 </form>
 
 
+
+<div class="col-md-12 mt-3">
+    <a href="@Url.Action("ListaVencidos", "Contrato")" class="btn btn-primary">Contratos Vencidos</a>
+    <a href="@Url.Action("Editar", "Contrato")" class="btn btn-success">Nuevo Contrato</a>
+
+</div>
 <table class="table">
     <thead>
         <th>Código</th>
@@ -70,21 +70,14 @@
 
         </th>
         <th>
-            Propietario
-        </th>
-        <th>
             Inquilino
-
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Tipo)
-
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Plazo)
+            Observaciones
 
         </th>
+
+
 
 
     </thead>
@@ -113,72 +106,71 @@
                     </td>
 
                     <td>
-                        @(item.Prop.NombreCompleto)
-                    </td>
-
-                    <td>
                         @(item.Inqui.NombreCompleto)
-
                     </td>
 
                     <td>
-                        @Html.DisplayFor(modelItem => item.Tipo)
-
+                        @(item.Observaciones)
                     </td>
 
                     <td>
-                        @Html.DisplayFor(modelItem => item.Plazo)
+
 
                     </td>
+
+
                     <td></td>
+                    @if (IsEmple || isAdmin)
+                    {
+                        <td>
+                            <a href="/Contrato/Detalle/@item.Id"></a>
+                            <form action="@Url.Action("Detalle", new{id=item.Id})" method="get" style="display: inline;">
+                                <button type="submit" class="btn btn-info btn-custom" title="Detalles">
+                                    <i class="fa-solid fa-circle-info"></i>
+                                </button>
+                            </form>
 
-                    @*--------ICONOS PARA EDITAR, DETALLE Y ELIMINAR -------------*@
-                    <td>
+                            <a href="@Url.Action("Nuevo", "Pago", new { id = item.Id })" class="btn btn-success btn-custom"
+                            title="Pagar">
+                                <h7 style="font-weight: bold;">Pagar</h7>
+                            </a>
 
 
-                        <a href="/Contrato/Detalle/@item.Id"></a>
-                        <form action="@Url.Action("Detalle", new{id=item.Id})" method="get" style="display: inline;">
-                            <button type="submit" class="btn btn-info btn-custom" title="Detalles">
-                                <i class="fa-solid fa-circle-info"></i>
-                            </button>
-                        </form> @* AGREGAR @item.Tipo *@
-
-                        <button type="button" class="btn btn-success btn-custom" data-bs-toggle="modal"
-                            data-bs-target="#paymentModal" data-id="@item.Id" title="Comprar">
-                            <h7 style="font-weight: bold;">Pagar</h7>
-                        </button>
-
-                        <form action="@Url.Action("ListadoPagos","Pago", new{id=item.Id})" method="get"
+                            <form action="@Url.Action("ListadoPagos","Pago", new{id=item.Id})" method="get"
                             style="display: inline;">
-                            <button type="submit" class="btn btn-primary btn-custom" title="Listado de pagos">
-                                <i class="fa-solid fa-dollar-sign"></i>
+                                <button type="submit" class="btn btn-primary btn-custom" title="Listado de pagos">
+                                    <i class="fa-solid fa-dollar-sign"></i>
+                                </button>
+                            </form>
+
+                            <button type="submit" class="btn btn-warning btn-custom"
+                            onclick="anular(@item.Id, '@item.Inmu.Direccion', '@item.Prop.NombreCompleto', '@item.Inqui.NombreCompleto')"
+                            title="Anular">
+                                Anular
+                            </button>
+
+                            @{
+                                var fechaFin = item.FechaFin;
+                                var diasRestantes = (fechaFin - DateTime.Now).TotalDays;
+                                var habilitarRenovacion = (diasRestantes <= 30 && diasRestantes >= 0 && item.Estado != 4);
+                                // Verifica si esta dentro de los proximos 30 días
+                            }
+
+                            <form action="@Url.Action("Renovar", new { id = item.Id })" method="get" style="display: inline;">
+                                <button type="submit" class="btn btn-dark btn-custom" title="Renovar" @(
+                    habilitarRenovacion ? "" :
+"disabled"
+                    )>
+                                    <i class="fa fa-sync-alt"></i>
+
                             </button>
                         </form>
 
-                        <button type="submit" class="btn btn-warning btn-custom"
-                            onclick="anular(@item.Id, '@item.Inmu.Direccion', '@item.Prop.NombreCompleto', '@item.Inqui.NombreCompleto', '@item.Tipo', '@item.Plazo')"
-                            title="Anular">
-                            Anular
-                        </button>
-
-                        <button type="submit" class="btn btn-danger btn-custom"
-                            onclick="eliminar(@item.Id, '@item.Inmu.Direccion', '@item.Prop.NombreCompleto', '@item.Inqui.NombreCompleto', '@item.Tipo', '@item.Plazo')"
-                            title="Eliminar">
-                            <i class="fas fa-trash"></i>
-                        </button>
                     </td>
+                    }
                 </tr>
             }
         }
-        <td>
-            <button type="button" class="btn btn-ligth">
-                <a href="/Contrato/Editar" title="Agregar Contrato">
-                    <i class="fa-duotone fa-solid fa-plus"></i>
-                </a>
-            </button>
-            </tr>
-
-
 
 
     </tbody>
@@ -202,12 +194,10 @@
                         <span id="contrato_anular_direccion"></span><br>
                         <span id="contrato_anular_propietario"></span><br>
                         <span id="contrato_anular_inquilino"></span><br>
-                        <span id="contrato_anular_tipo"></span><br>
-                        <span id="contrato_anular_plazo"></span>
+
                     </p>
                 </div>
                 <div class="modal-footer">
-                    <!-- Enlace para redirigir a la vista Multa -->
                     <a id="link_abonar_multa" class="btn btn-warning btn-custom" href="#" title="Abonar multa">
                         Abonar Multa
                     </a>
@@ -234,8 +224,7 @@
                         <span id="contrato_eliminar_direccion"></span><br>
                         <span id="contrato_eliminar_propietario"></span><br>
                         <span id="contrato_eliminar_inquilino"></span><br>
-                        <span id="contrato_eliminar_tipo"></span><br>
-                        <span id="contrato_eliminar_plazo"></span>
+
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -264,7 +253,6 @@
         </div>
     </div>
 }
-@Html.Partial("../Pago/Nuevo", new inmobiliaria_AT.Models.Pago())
 
 @section Scripts {
     <script>
@@ -273,9 +261,7 @@
             // Seleccionamos el enlace que abrirá la URL
             var abonarMultaLink = document.getElementById('link_abonar_multa');
 
-            // Escuchar el evento de clic en el botón "Confirmar Anulación"
             abonarMultaLink.addEventListener('click', function (event) {
-                // Prevenir la acción por defecto del enlace
                 event.preventDefault();
 
                 // Obtener el ID del contrato desde el campo oculto
@@ -286,10 +272,9 @@
                     // Generar la URL usando el ID del contrato
                     var url = '@Url.Action("Multa", "Pago", new { idContrato = "__id__" })'.replace('__id__', contratoId);
 
-                    // Redirigir a la nueva URL
+                    // Redirige a la nueva URL
                     window.location.href = url;
                 } else {
-                    // Si no se encuentra el contrato, puedes mostrar un mensaje de error o hacer algo más
                     alert("Error: no se encontró el ID del contrato.");
                 }
             });
@@ -297,7 +282,7 @@
 
         function limpiarFiltros() {
             // resetea los valores de los selects
-            document.querySelector("select[name='propietarioId']").value = "";
+            document.querySelector("select[name='inquilinoId']").value = "";
             document.querySelector("select[name='inmuebleId']").value = "";
 
             // Resetea los campos de fecha
@@ -325,7 +310,6 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/contrato.css">
-    <script src="../js/nuevoPago.js"></script>
     <script src="../js/contrato.js"></script>
 
 }
