--- a/Views/Inmueble/BuscarInmuebles.cshtml
+++ b/Views/Inmueble/BuscarInmuebles.cshtml
@@ -90,9 +90,9 @@
 </div>
 
 
-<div class="form-group-spacing volver">
-    <a asp-action="Index" title="Volver">
-        <i class="fa-solid fa-undo fa-lg"></i>
+<div class="form-group-spacing mt-8">
+    <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
+        <i class="fa-solid fa-undo"></i>
     </a>
 </div>
 </div>
