--- a/Views/Inmueble/Detalle.cshtml
+++ b/Views/Inmueble/Detalle.cshtml
@@ -65,12 +65,10 @@
             <span asp-validation-for="PropietarioInmueble.NombreCompleto" class="text-danger"></span>
         </div>
     </div>
-    <div class="volver">
-        <div class="form-group-spacing">
-            <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo fa-lg"></i>
-            </a>
-        </div>
+    <div class="form-group-spacing mt-8">
+        <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
+            <i class="fa-solid fa-undo"></i>
+        </a>
     </div>
 </div>
 </div>
