--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -96,9 +96,9 @@
                     </div>
                 </div>
         </form>
-        <div class="form-group-spacing volver">
-            <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo fa-lg"></i>
+        <div class="form-group-spacing mt-8">
+            <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
+                <i class="fa-solid fa-undo"></i>
             </a>
         </div>
 
