--- a/Views/Pago/Multa.cshtml
+++ b/Views/Pago/Multa.cshtml
@@ -5,10 +5,10 @@
     int id = Model != null ? Model.Id : 0;
 
     // Calcular multa si TiempoRestante no es nulo
-    var multa = ViewBag.TiempoRestante != null ? Math.Abs(ViewBag.TiempoRestante) * 1500 : 0;
+    var multa = ViewBag.Multa;
 }
 
-<h4>@Model.DireccionInmueble.ToUpper(): Multa por anulación de contrato</h4>
+<h4>@Model.DireccionInmueble.ToUpper(): Multa por anulación de contrato #@Model.Id</h4>
 <hr>
 <div class="col-md-12">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -40,8 +40,8 @@
         </div>
 
         <div class="form-group col-md-6 form-group-spacing">
-            <label>Multa por Rescisión</label>
-            <input type="text" class="form-control" value="$@multa " readonly>
+            <label>Importe por Rescisión</label>
+            <input type="text" class="form-control text-danger" value="$@multa " readonly>
         </div>
 
         <div class="form-group col-md-6 form-group-spacing">
@@ -50,8 +50,8 @@
         </div>
     </div>
 
-    <div class="form-group-spacing">
-        <a asp-action="Index" title="Volver">
+    <div class="form-group-spacing mt-8">
+        <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
             <i class="fa-solid fa-undo"></i>
         </a>
     </div>
@@ -97,7 +97,7 @@
         confirmacionForm.addEventListener('submit', function (event) {
             var contratoId = document.getElementById('IdContrato').value;
 
-            if (!contratoId ) {
+            if (!contratoId) {
                 event.preventDefault(); // Evita el envío si los datos no son válidos
                 alert("Error: No se encontraron los datos necesarios.");
             }
