--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,27 +51,28 @@
                             </li>
                         }
 
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                        @if (isEmple || isAdmin)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Inmuebles</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="BuscarInmuebles">Buscar inmueble</a></li>
-                              @if (isEmple || isAdmin)
-                                {
+
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="ListaPorPropietario">Inmuebles por Propietario</a></li>
-                                
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
+
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="Index">Listado de inmuebles</a></li>
-                               
-                            
+
+
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="Editar">Nuevo Inmueble</a></li>
-                                }
-                            </ul>
-                        </li>
+
+                                </ul>
+                            </li>
+                        }
 
 
                     @if (isEmple || isAdmin)
@@ -103,8 +104,9 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Pago"
                                         asp-action="Index">Principal</a></li>
                                         
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago" data-bs-toggle="modal"
-                                        data-bs-target="#paymentModal" id="openModalBtn">Nuevo Pago</a></li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Pago" asp-action="Nuevo" id="openModalBtn">Nuevo Pago</a>
+                                </li>
                             </ul>
                         </li>
                         }
