--- a/Views/Usuario/Detalle.cshtml
+++ b/Views/Usuario/Detalle.cshtml
@@ -56,9 +56,9 @@
             <p>Sin avatar</p>
         }
 
-        <div class="form-group-spacing volver mt-5">
-            <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo fa-lg"></i>
+        <div class="form-group-spacing mt-8">
+            <a asp-action="Index" class="btn btn-dark mb-3" title="Volver">
+                <i class="fa-solid fa-undo"></i>
             </a>
         </div>
     </div>
